--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -112,73 +112,73 @@ spring.aop.proxy-target-class=true
 #
 # cas.authn.accept.users=casuser::Mellon
 
-#整合shiro
-#允许登录的用户，必须要有以下角色，否则拒绝，多个逗号隔开
+#\u6574\u5408shiro
+#\u5141\u8BB8\u767B\u5F55\u7684\u7528\u6237\uFF0C\u5FC5\u987B\u8981\u6709\u4EE5\u4E0B\u89D2\u8272\uFF0C\u5426\u5219\u62D2\u7EDD\uFF0C\u591A\u4E2A\u9017\u53F7\u9694\u5F00
 #cas.authn.shiro.requiredRoles=admin
-##允许登录的用户，必须要有以下权限，否则拒绝，多个逗号隔开
+##\u5141\u8BB8\u767B\u5F55\u7684\u7528\u6237\uFF0C\u5FC5\u987B\u8981\u6709\u4EE5\u4E0B\u6743\u9650\uFF0C\u5426\u5219\u62D2\u7EDD\uFF0C\u591A\u4E2A\u9017\u53F7\u9694\u5F00
 #cas.authn.shiro.requiredPermissions=userInfo:add,userInfo:view
-##shir配置文件位置
-#cas.authn.shiro.location=classpath:shiro.ini_bak
-##shiro name 唯一
+##shir\u914D\u7F6E\u6587\u4EF6\u4F4D\u7F6E
+#cas.authn.shiro.location=classpath:shiro.ini
+##shiro name \u552F\u4E00
 #cas.authn.shiro.name=cas-shiro
-## 与Query Authentication一致的加密策略
+## \u4E0EQuery Authentication\u4E00\u81F4\u7684\u52A0\u5BC6\u7B56\u7565
 #cas.authn.shiro.passwordEncoder.type=DEFAULT
 #cas.authn.shiro.passwordEncoder.characterEncoding=UTF-8
 #cas.authn.shiro.passwordEncoder.encodingAlgorithm=MD5
 
-cas.authn.rest.uri=http://rest.cas.com:8083/login
-#如果密码有加密,打开下面配置,我的是明文
-cas.authn.rest.passwordEncoder.type=DEFAULT
-cas.authn.rest.passwordEncoder.characterEncoding=UTF-8
-cas.authn.rest.passwordEncoder.encodingAlgorithm=MD5
+#cas.authn.rest.uri=http://rest.cas.com:8083/login
+##\u5982\u679C\u5BC6\u7801\u6709\u52A0\u5BC6,\u6253\u5F00\u4E0B\u9762\u914D\u7F6E,\u6211\u7684\u662F\u660E\u6587
+#cas.authn.rest.passwordEncoder.type=DEFAULT
+#cas.authn.rest.passwordEncoder.characterEncoding=UTF-8
+#cas.authn.rest.passwordEncoder.encodingAlgorithm=MD5
 
-## 添加jdbc认证
+# \u6DFB\u52A0jdbc\u8BA4\u8BC1
 #cas.authn.jdbc.query[0].sql=SELECT * FROM user_info WHERE username=?
-## 哪一个字段作为密码字段
+## \u54EA\u4E00\u4E2A\u5B57\u6BB5\u4F5C\u4E3A\u5BC6\u7801\u5B57\u6BB5
 #cas.authn.jdbc.query[0].fieldPassword=password
-## 配置数据库连接
+## \u914D\u7F6E\u6570\u636E\u5E93\u8FDE\u63A5
 #cas.authn.jdbc.query[0].url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
 #cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
-## 数据库用户名
+## \u6570\u636E\u5E93\u7528\u6237\u540D
 #cas.authn.jdbc.query[0].user=root
-## 数据库密码
+## \u6570\u636E\u5E93\u5BC6\u7801
 #cas.authn.jdbc.query[0].password=123456
-## mysql驱动
+## mysql\u9A71\u52A8
 #cas.authn.jdbc.query[0].driverClass=com.mysql.cj.jdbc.Driver
 #
-## 配置加密策略
+## \u914D\u7F6E\u52A0\u5BC6\u7B56\u7565
 #cas.authn.jdbc.query[0].passwordEncoder.type=DEFAULT
 #cas.authn.jdbc.query[0].passwordEncoder.characterEncoding=UTF-8
 #cas.authn.jdbc.query[0].passwordEncoder.encodingAlgorithm=MD5
 
-#配置自定义加密策略
+#\u914D\u7F6E\u81EA\u5B9A\u4E49\u52A0\u5BC6\u7B56\u7565
 #cas.authn.jdbc.query[0].passwordEncoder.type=com.solvay.cas.CustomPasswordEncoder
 #cas.authn.jdbc.query[0].passwordEncoder.characterEncoding=UTF-8
 #cas.authn.jdbc.query[0].passwordEncoder.encodingAlgorithm=MD5
 
-## 配置加盐密码策略
-## 加密迭代次数
+# \u914D\u7F6E\u52A0\u76D0\u5BC6\u7801\u7B56\u7565
+# \u52A0\u5BC6\u8FED\u4EE3\u6B21\u6570
 #cas.authn.jdbc.encode[0].numberOfIterations=2
-## 该列名的值可替代上面的值，但对密码加密时必须取该值进行处理
+## \u8BE5\u5217\u540D\u7684\u503C\u53EF\u66FF\u4EE3\u4E0A\u9762\u7684\u503C\uFF0C\u4F46\u5BF9\u5BC6\u7801\u52A0\u5BC6\u65F6\u5FC5\u987B\u53D6\u8BE5\u503C\u8FDB\u884C\u5904\u7406
 #cas.authn.jdbc.encode[0].numberOfIterationsFieldName=
-## 盐值固定列
+## \u76D0\u503C\u56FA\u5B9A\u5217
 #cas.authn.jdbc.encode[0].saltFieldName=username
-## 静态盐值
+## \u9759\u6001\u76D0\u503C
 #cas.authn.jdbc.encode[0].staticSalt=.
 #cas.authn.jdbc.encode[0].sql=SELECT * FROM user_info WHERE username =?
-## 对处理盐值后的算法
+## \u5BF9\u5904\u7406\u76D0\u503C\u540E\u7684\u7B97\u6CD5
 #cas.authn.jdbc.encode[0].algorithmName=MD5
 #cas.authn.jdbc.encode[0].passwordFieldName=password
 #cas.authn.jdbc.encode[0].expiredFieldName=expired
 #cas.authn.jdbc.encode[0].disabledFieldName=disabled
-## 数据库连接
+## \u6570\u636E\u5E93\u8FDE\u63A5
 #cas.authn.jdbc.encode[0].url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
 #cas.authn.jdbc.encode[0].dialect=org.hibernate.dialect.MySQL5Dialect
 #cas.authn.jdbc.encode[0].driverClass=com.mysql.cj.jdbc.Driver
 #cas.authn.jdbc.encode[0].user=root
 #cas.authn.jdbc.encode[0].password=123456
 
-#注册客户端
+#\u6CE8\u518C\u5BA2\u6237\u7AEF
 cas.serviceRegistry.initFromJson=true
 cas.serviceRegistry.watcherEnabled=true
 cas.serviceRegistry.schedule.repeatInterval=120000
@@ -186,11 +186,38 @@ cas.serviceRegistry.schedule.startDelay=15000
 cas.serviceRegistry.managementType=DEFAULT
 cas.serviceRegistry.json.location=classpath:/services
 
-#配置允许登出后跳转到指定页面
+#\u914D\u7F6E\u5141\u8BB8\u767B\u51FA\u540E\u8DF3\u8F6C\u5230\u6307\u5B9A\u9875\u9762
 cas.logout.followServiceRedirects=true
-#跳转到指定页面需要的参数名为 service
+#\u8DF3\u8F6C\u5230\u6307\u5B9A\u9875\u9762\u9700\u8981\u7684\u53C2\u6570\u540D\u4E3A service
 cas.logout.redirectParameter=service
-#在退出时是否需要 确认一下  true确认 false直接退出
+#\u5728\u9000\u51FA\u65F6\u662F\u5426\u9700\u8981 \u786E\u8BA4\u4E00\u4E0B  true\u786E\u8BA4 false\u76F4\u63A5\u9000\u51FA
 cas.logout.confirmLogout=true
-#是否移除子系统的票据
+#\u662F\u5426\u79FB\u9664\u5B50\u7CFB\u7EDF\u7684\u7968\u636E
 cas.logout.removeDescendantTickets=true
+
+# \u52A8\u6001\u6DFB\u52A0services
+#\u6570\u636E\u5E93\u7528\u6237\u540D
+cas.serviceRegistry.jpa.user=root
+#\u6570\u636E\u5E93\u5BC6\u7801
+cas.serviceRegistry.jpa.password=123456
+#mysql\u9A71\u52A8
+cas.serviceRegistry.jpa.driverClass=com.mysql.cj.jdbc.Driver
+#\u6570\u636E\u5E93\u8FDE\u63A5
+cas.serviceRegistry.jpa.url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
+cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#\u8FDE\u63A5\u6C60\u914D\u7F6E
+cas.serviceRegistry.jpa.pool.suspension=false
+cas.serviceRegistry.jpa.pool.minSize=6
+cas.serviceRegistry.jpa.pool.maxSize=18
+cas.serviceRegistry.jpa.pool.maxWait=2000
+cas.serviceRegistry.jpa.pool.timeoutMillis=1000
+#\u9ED8\u8BA4\u4E3Acreate-drop\uFF0C\u8868\u793A\u6BCF\u6B21\u542F\u52A8\u670D\u52A1\u90FD\u4F1A\u6E05\u9664\u4F60\u4E4B\u524D\u6CE8\u518C\u7684cas\u670D\u52A1
+cas.serviceRegistry.jpa.ddlAuto=update
+#cas.jdbc.showSql=true
+
+# \u9ED8\u8BA4\u4E3B\u9898
+cas.theme.defaultThemeName=app2
+
+#\u8BB0\u4F4F\u6211
+cas.ticket.tgt.rememberMe.enabled=true
+cas.ticket.tgt.rememberMe.timeToKillInSeconds=3600
