Cas5.3.x单点登录服务器搭建过程：分布式部署和开启Oauth2

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,24 @@
                     <version>2.3.2</version>
                 </dependency>
 
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-oauth-webflow</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-redis-ticket-registry</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-webapp-session-redis</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
+
                 <!--<dependency>
                     <groupId>io.springfox</groupId>
                     <artifactId>springfox-swagger2</artifactId>
