--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -195,25 +195,29 @@ cas.logout.confirmLogout=true
 #\u662F\u5426\u79FB\u9664\u5B50\u7CFB\u7EDF\u7684\u7968\u636E
 cas.logout.removeDescendantTickets=true
 
-# \u52A8\u6001\u6DFB\u52A0services
-#\u6570\u636E\u5E93\u7528\u6237\u540D
-cas.serviceRegistry.jpa.user=root
-#\u6570\u636E\u5E93\u5BC6\u7801
-cas.serviceRegistry.jpa.password=123456
-#mysql\u9A71\u52A8
-cas.serviceRegistry.jpa.driverClass=com.mysql.cj.jdbc.Driver
-#\u6570\u636E\u5E93\u8FDE\u63A5
-cas.serviceRegistry.jpa.url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
-cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#\u8FDE\u63A5\u6C60\u914D\u7F6E
-cas.serviceRegistry.jpa.pool.suspension=false
-cas.serviceRegistry.jpa.pool.minSize=6
-cas.serviceRegistry.jpa.pool.maxSize=18
-cas.serviceRegistry.jpa.pool.maxWait=2000
-cas.serviceRegistry.jpa.pool.timeoutMillis=1000
-#\u9ED8\u8BA4\u4E3Acreate-drop\uFF0C\u8868\u793A\u6BCF\u6B21\u542F\u52A8\u670D\u52A1\u90FD\u4F1A\u6E05\u9664\u4F60\u4E4B\u524D\u6CE8\u518C\u7684cas\u670D\u52A1
-cas.serviceRegistry.jpa.ddlAuto=update
-#cas.jdbc.showSql=true
+## \u52A8\u6001\u6DFB\u52A0services
+##\u6570\u636E\u5E93\u7528\u6237\u540D
+#cas.serviceRegistry.jpa.user=root
+##\u6570\u636E\u5E93\u5BC6\u7801
+#cas.serviceRegistry.jpa.password=123456
+##mysql\u9A71\u52A8
+#cas.serviceRegistry.jpa.driverClass=com.mysql.cj.jdbc.Driver
+##\u6570\u636E\u5E93\u8FDE\u63A5
+#cas.serviceRegistry.jpa.url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
+#cas.serviceRegistry.jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+##\u8FDE\u63A5\u6C60\u914D\u7F6E
+#cas.serviceRegistry.jpa.pool.suspension=false
+#cas.serviceRegistry.jpa.pool.minSize=6
+#cas.serviceRegistry.jpa.pool.maxSize=18
+#cas.serviceRegistry.jpa.pool.maxWait=2000
+#cas.serviceRegistry.jpa.pool.timeoutMillis=1000
+##\u9ED8\u8BA4\u4E3Acreate-drop\uFF0C\u8868\u793A\u6BCF\u6B21\u542F\u52A8\u670D\u52A1\u90FD\u4F1A\u6E05\u9664\u4F60\u4E4B\u524D\u6CE8\u518C\u7684cas\u670D\u52A1
+##create-drop \u91CD\u542Fcas\u670D\u52A1\u7684\u65F6\u5019\uFF0C\u5E72\u6389\u65B0\u5EFA
+##create  \u6CA1\u6709\u8868\u5C31\u521B\u5EFA\uFF0C\u6709\u5C31\u4E0D\u521B\u5EFA
+##none \u4E00\u76F4\u90FD\u6709
+##update \u66F4\u65B0
+#cas.serviceRegistry.jpa.ddlAuto=create-drop
+##cas.jdbc.showSql=true
 
 # \u9ED8\u8BA4\u4E3B\u9898
 cas.theme.defaultThemeName=app2
@@ -221,3 +225,64 @@ cas.theme.defaultThemeName=app2
 #\u8BB0\u4F4F\u6211
 cas.ticket.tgt.rememberMe.enabled=true
 cas.ticket.tgt.rememberMe.timeToKillInSeconds=3600
+
+#\u81EA\u5B9A\u4E49\u9519\u8BEF\u4FE1\u606F
+cas.authn.exceptions.exceptions=com.solvay.cas.exception.CaptchaErrorException,com.solvay.cas.exception.MyAccountNotFoundException
+
+#\u589E\u52A0OAuth2.0\u534F\u8BAE
+cas.authn.oauth.refreshToken.timeToKillInSeconds=2592000
+cas.authn.oauth.code.timeToKillInSeconds=30
+cas.authn.oauth.code.numberOfUses=1
+cas.authn.oauth.accessToken.releaseProtocolAttributes=true
+cas.authn.oauth.accessToken.timeToKillInSeconds=7200
+cas.authn.oauth.accessToken.maxTimeToLiveInSeconds=28800
+cas.authn.oauth.grants.resourceOwner.requireServiceHeader=true
+cas.authn.oauth.userProfileViewType=NESTED
+
+#\u9700\u8981\u914D\u7F6E server name\u7684\u4FE1\u606F
+cas.server.name: https://server.cas.com:${server.port}
+cas.server.prefix: ${cas.server.name}/cas
+
+#\u914D\u7F6Eredis\u5B58\u50A8ticket
+cas.ticket.registry.redis.host=134.134.2.70
+cas.ticket.registry.redis.database=1
+cas.ticket.registry.redis.port=6379
+cas.ticket.registry.redis.password=
+cas.ticket.registry.redis.timeout=2000
+cas.ticket.registry.redis.useSsl=false
+cas.ticket.registry.redis.usePool=true
+cas.ticket.registry.redis.pool.max-active=20
+cas.ticket.registry.redis.pool.maxIdle=8
+cas.ticket.registry.redis.pool.minIdle=0
+cas.ticket.registry.redis.pool.maxActive=8
+cas.ticket.registry.redis.pool.maxWait=-1
+cas.ticket.registry.redis.pool.numTestsPerEvictionRun=0
+cas.ticket.registry.redis.pool.softMinEvictableIdleTimeMillis=0
+cas.ticket.registry.redis.pool.minEvictableIdleTimeMillis=0
+cas.ticket.registry.redis.pool.lifo=true
+cas.ticket.registry.redis.pool.fairness=false
+cas.ticket.registry.redis.pool.testOnCreate=false
+cas.ticket.registry.redis.pool.testOnBorrow=false
+cas.ticket.registry.redis.pool.testOnReturn=false
+cas.ticket.registry.redis.pool.testWhileIdle=false
+#cas.ticket.registry.redis.sentinel.master=mymaster
+#cas.ticket.registry.redis.sentinel.nodes[0]=localhost:26377
+#cas.ticket.registry.redis.sentinel.nodes[1]=localhost:26378
+#cas.ticket.registry.redis.sentinel.nodes[2]=localhost:26379
+
+
+#\u914D\u7F6Eredis\u5B58\u50A8session
+cas.webflow.autoconfigure=true
+cas.webflow.alwaysPauseRedirect=false
+cas.webflow.refresh=true
+cas.webflow.redirectSameState=false
+
+cas.webflow.session.lockTimeout=30
+cas.webflow.session.compress=false
+cas.webflow.session.maxConversations=5
+cas.webflow.session.storage=true
+spring.session.store-type=redis
+spring.redis.host=134.134.270
+spring.redis.password=
+spring.redis.port=6379
+spring.redis.database=1
