Cas5.3.x单点登录服务器搭建过程：CAS集群部署

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -270,6 +270,22 @@ cas.ticket.registry.redis.pool.testWhileIdle=false
 #cas.ticket.registry.redis.sentinel.nodes[1]=localhost:26378
 #cas.ticket.registry.redis.sentinel.nodes[2]=localhost:26379
 
+#\u914D\u7F6Ejpa\u5B58\u50A8ticket
+#cas.ticket.registry.jpa.url=jdbc:mysql://134.134.2.70:33061/cas?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8
+#cas.ticket.registry.jpa.user=root
+#cas.ticket.registry.jpa.password=123456
+#cas.ticket.registry.jpa.driverClass=com.mysql.cj.jdbc.Driver
+#cas.ticket.registry.jpa.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#cas.ticket.registry.jpa.ddlAuto=create-drop
+#cas.ticket.registry.jpa.autocommit=false
+#cas.ticket.registry.jpa.leakThreshold=10
+#cas.ticket.registry.jpa.idleTimeout=5000
+#cas.ticket.registry.jpa.pool.suspension=false
+#cas.ticket.registry.jpa.pool.minSize=6
+#cas.ticket.registry.jpa.pool.maxSize=18
+#cas.ticket.registry.jpa.pool.maxWait=2000
+#cas.ticket.registry.jpa.dataSourceProxy=false
+
 
 #\u914D\u7F6Eredis\u5B58\u50A8session
 cas.webflow.autoconfigure=true
@@ -286,3 +302,5 @@ spring.redis.host=134.134.270
 spring.redis.password=
 spring.redis.port=6379
 spring.redis.database=1
+
+cas.tgc.crypto.enabled=false
