--- a/pom.xml
+++ b/pom.xml
@@ -212,12 +212,17 @@
                     <artifactId>cas-server-support-redis-ticket-registry</artifactId>
                     <version>${cas.version}</version>
                 </dependency>
-
+                <!--<dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-jpa-ticket-registry</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>-->
                 <dependency>
                     <groupId>org.apereo.cas</groupId>
                     <artifactId>cas-server-webapp-session-redis</artifactId>
                     <version>${cas.version}</version>
                 </dependency>
+
 
                 <!--<dependency>
                     <groupId>io.springfox</groupId>
