Cas5.3.x单点登录服务器搭建过程：CAS单点登录-单用户登录实现

--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
                     <version>${cas.version}</version>
                 </dependency>
 
+                <dependency>
+                    <groupId>org.apereo.cas</groupId>
+                    <artifactId>cas-server-support-rest</artifactId>
+                    <version>${cas.version}</version>
+                </dependency>
 
                 <!--<dependency>
                     <groupId>io.springfox</groupId>
