--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -304,3 +304,6 @@ spring.redis.port=6379
 spring.redis.database=1
 
 cas.tgc.crypto.enabled=false
+
+#\u5F00\u542Frestful\u9A8C\u8BC1 \u914D\u4E0D\u914D\u7F6E\u90FD\u53EF\u4EE5
+cas.authn.rest.uri=http://localhost:8080/cas/v1
